monitoring/controllers/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: ops-monitoring
spec:
  type: ClusterIP
  selector: { app: prometheus }
  ports:
    - name: http
      port: 9090
      targetPort: http
